fix: Re-added missing margin on the end of run leaderboards button
Temporary since tab menu is getting a rework, this is just so players don't get confused and lose their runs by trying to refresh leaderboards

--- a/styles/pages/leaderboards/leaderboards.scss
+++ b/styles/pages/leaderboards/leaderboards.scss
@@ -22,7 +22,20 @@
 	}
 
 	&__button {
+		border-top-left-radius: 0px;
+		border-bottom-left-radius: 0px;
+	}
+
+	&__end-of-run-button {
 		margin-left: 8px;
+	}
+
+	&__dropdown {
+		border-top-right-radius: 0px;
+		border-bottom-right-radius: 0px;
+		& .DropDownIcon {
+			border-radius: 0px;
+		}
 	}
 }
 
